# sawtk

./: .gitignore  Cargo.toml  README.md
protos/: request.proto
src/: lib.rs  messages.rs  util.rs  wallet.rs
src/namespace/: mod.rs
src/ns/: mod.rs
src/signing/: mod.rs
src/tp/: mod.rs
src/tx/: batcher.rs  mod.rs  signer.rs
tools/namespace/: Cargo.toml
tools/namespace/src/: main.rs
tools/private-key/: Cargo.toml
tools/private-key/src/: main.rs
