[package]
name = "sawtk"
version = "0.1.0"
authors = ["kigi <kigi.chang@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.0"
byteorder = "1.2"
uuid =  { version = "0.8.1", features = ["serde", "v4", "v1"] }
sawtooth-sdk = "0.4.0"
bs58 = "0.3.0"
protobuf="2"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"